white space issues

--- a/src/utilities/forms.less
+++ b/src/utilities/forms.less
@@ -110,7 +110,7 @@
         }
 
         &:before {
-            content: "";
+            content: " ";
             display: inline-block;
             flex-shrink: 0;
             border: solid 2px @form-control-border-color;
@@ -183,7 +183,8 @@
         }
 
         &:before {
-            content: "";
+            content: " ";
+            white-space: pre;
             display: inline-block;
             flex-shrink: 0;
             border: solid 2px @form-control-border-color;
